--- a/index.html
+++ b/index.html
@@ -4,10 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1> i am lokes</h1>
     <h2>hello i am lokes</h2>
     <h3>this is our institute</h3>
+
+    <h1 style="color: blue; background-color: aquamarine;">this is h1 tag</h1>
+    <h2 style="color: red; background-color: green;">this is h2 tag</h2>
+    <h3 style="color: orangered; background-color: purple;">this is h1 tag</h3>
+
 </body>
 </html>
