--- a/index.html
+++ b/index.html
@@ -15,5 +15,9 @@
     <h2 style="color: red; background-color: green;">this is h2 tag</h2>
     <h3 style="color: orangered; background-color: purple;">this is h1 tag</h3>
 
+    <h4 id="h4">hello h4 heading tag</h4>
+    <h5 id="h5">hello h5 heading tag</h5>
+    <h6 id="h6">hello h6 heading tag</h6>
+
 </body>
 </html>
